syntax = "proto3";

/** Common enums shared by multiple messages
 *  Mainly used to avoid circular dependencies
 */
package mcfs.common;

/** 
 * The priority of a message
 * Used to selectively determine what should be sent or logged 
 */
enum LogLevel {
    LOG_LEVEL_DATA = 0;
    LOG_LEVEL_DEBUG = 1;
    LOG_LEVEL_WARNING = 2;
    LOG_LEVEL_ERROR = 3;
}