syntax = "proto3";

import "command.proto";
import "common.proto";
import "core.proto";
import "data.proto";
import "status.proto";
import "external/timestamp.proto";

package mcfs.log;

/**
 * Log message, primarily designed for local storage and debugging
 *
 * | Field          | Description                                              |
 * |----------------|----------------------------------------------------------|
 * | timestamp      | The time this message was logged                         |
 * | log_level      | Priority of this log message                             |
 * | log_string     | Optional custom string associated with the log           |
 * | logged_message | Sub-message to log, avoids copying data                  |
 */
message Log {
    google.protobuf.Timestamp timestamp = 1;
    mcfs.common.LogLevel log_level = 2;
    optional LogString log_string = 3;
    optional LoggedMessage logged_message = 4;
}

/**
 * Container for another mcfs message to be logged
 *
 * | Field          | Description                                              |
 * |----------------|----------------------------------------------------------|
 * | logged_message | Other mcfs message                                       |
 */
message LoggedMessage {
    oneof logged_message {
        mcfs.command.Command command = 1;
        mcfs.data.Data data = 2;
        mcfs.status.Status status = 3;
        mcfs.core.Message core_message = 4;
    }
}

/**
 * Custom log string. Should be a short, descriptive message such as 
 * a custom error or debug statement
 *
 * | Field  | Description                                                      |
 * |--------|------------------------------------------------------------------|
 * | string | Custom log string                                                |
 */
message LogString {
    string string = 1;
}